src/components/_base-components/dialog/main-dialog/style.less
.main-dialog {
    position: fixed;
    left: @margin-large - @margin-default;
    right: @margin-large - @margin-default;
    top: @margin-default;
    bottom: @margin-default;
    display: grid;
    justify-content: center;
    align-content: center;
    >.dialog-widget {
        >.widget-content {
            >.tab-container {
                height: 100%;
                >.lane-widget {
                    height: 100%;
                    >.widget-header {
                        border-bottom-right-radius: 0;
                        border-bottom-left-radius: 0;
                        padding-left: 0;
                        height: @default-widget-header-height;
                        >.header-left {
                            padding-left: 2px;
                            >.tab-list {
                                margin-top: .5em;
                                >li {
                                    height: 1.75em;
                                    &.active {
                                        background-color: @secondary-5;
                                    }
                                }
                            }
                        }
                    }
                    >.widget-content {
                        .full-size();
                        top: @default-widget-header-height;
                        background-color: @secondary-5;
                        border-width: 2px;
                        margin: 0;
                        padding: 0;
                        overflow: auto;
                        >div {
                            padding: @margin-default 0;
                            >.tab-content {
                                margin: 0;
                                height: 100%;
                                >.lane-tab-widget {
                                    height: 100%;
                                    >.widget-content {
                                        background-color: @secondary-5;
                                        overflow: hidden;
                                    }
                                }
                            }
                        }
                    }
                }
            }
        }
    }
    >.close-button {
        font-size: 3.5em;
        position: absolute;
        top: -1.75rem;
        right: -1.75rem;
        color: @primary-3;
        text-shadow: -3px 0 @secondary-6, 0 3px @secondary-6, 3px 0 @secondary-6, 0 -3px @secondary-6;
        cursor: pointer;
        &:hover {
            color: darken(@primary-3, 10%);
        }
    }
    >.loading-shield {
        position: absolute;
        top: 0;
        bottom: 0;
        right: 0;
        left: 0;
        background-color: #000;
        opacity: 0.2;
        >.loading-info {
            position: absolute;
            top: 50%;
            left: 50%;
            transform: translateY(-50%) translateX(-50%);
            >.loading-spinner {
                width: 10em;
                height: 10em;
            }
            >.loading-hint {
                font-weight: bold;
                font-size: 3em;
                color: @secondary-6;
                display: block;
            }
        }
    }
}

